backend-maven/staging/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: staging-crm
  name: staging-crm
  namespace: ngfs
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: staging-staging-crm
  type: ClusterIP
