backend-maven/staging/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: staging-crm
  name: staging-crm
  namespace: ngfs
spec:
  host: staging-crm.ngfs.115.127.24.186.nip.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ngfs
    weight: 100
  wildcardPolicy: None
